--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="static/favicon.ico"/>
     <title>Shivt</title>
   </head>
   <body>
@@ -11,3 +12,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+npm
